--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "apitemplate",
   "version": "1.0.0",
-  "description": "",
+  "description": "Template de um setup basico para criacao de uma API usando express e mongoose",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./server.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["api", "template", "express", "mongodb", "mongoose"],
+  "author": "DepTH",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
